fixed spacing in about.jade

--- a/css/others_for_adapted_pages.scss
+++ b/css/others_for_adapted_pages.scss
@@ -1593,6 +1593,7 @@ p.section_news {
 
 #about_project {
 	padding-top: 0;
+	padding-bottom: 0;
 
 	.container {
 		margin: 0 auto;
